fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -64,6 +64,10 @@
 .author-container .author-info-description:nth-of-type(n+2){
 	padding-top: 40px;
 }
+
+.author-container .author-info-description:first-of-type{
+	padding-top: 0;
+}
 	
 
 @media (max-width: 820px) {
